# pyliza

./: .env.example  .gitignore  config.py  helpers.py  main.py  manageChroma.py  onChainReader.py  package-lock.json  pyproject.toml  readme.md  scrape.py  search.py  setup.py  testContext.py  testTwitter.py  tweetLogic.py
context/: marketData.py  news.py
docs/: index.md
docs/.vitepress/: config.mts
onchain/: loadContract.py
scraping/: getContext.py  scrape.py
tests/: testTwitter.py
twitter/: twitterClient.py  twitterInteractions.py
